fixed the footer covering the interests section in mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,8 @@ article {
 aside {
     float: right;
     background-color: white;
-    margin-top: 5em;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
     border: 5px solid transparent;
     border-radius: 15px;
 }
